Fri Dec  5 01:35:08 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (sym_to_proc): use hidden object.

Fri Dec  5 01:19:21 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* pack.c (pack_pack): propagate taint status from format string to
	  result string.

Fri Dec  5 00:34:10 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* process.c (run_exec_dup2): need to sort by reverted order when
	  restoring fds.

Fri Dec  5 00:17:18 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (sym_to_proc): caches Symbol procs, based on a patch from
	  Shumpei Akai <admin AT flexfrank.net>.  [ruby-dev:37265]

Thu Dec  4 23:29:34 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (waitpid): fix bug of checking child slot.

	* win32/win32.c (FindChildSlotByHandle): new.

Thu Dec  4 23:24:05 2008  Tanaka Akira  <akr@fsij.org>

	* lib/open3.rb (Open3.poutput3): new method.
	  (Open3.poutput2): ditto.
	  (Open3.poutput2e): ditto.

Thu Dec  4 23:02:13 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* spec/default.mspec: follows changes in rubyspec project.
	  inherits configurations from ruby.1.9.mspec.

Thu Dec  4 22:13:55 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* test/ruby/test_complex.rb: added some tests.

	* test/ruby/test_rational.rb: ditto.

Thu Dec  4 19:56:20 2008  Tanaka Akira  <akr@fsij.org>

	* lib/open3.rb (Open3.popen3): simplified.
	  (Open3.popen_run): extracted from Open3.popen3.
	  (Open3.popen2): new method.
	  (Open3.popen2e): new method.
	  (Open3.pipeline_rw): new method.
	  (Open3.pipeline_r): new method.
	  (Open3.pipeline_w): new method.
	  (Open3.pipeline_run): new private method.

Thu Dec  4 19:16:28 2008  Tanaka Akira  <akr@fsij.org>

	* process.c (check_exec_fds): resolve cascaded child fd reference.

Thu Dec  4 16:58:12 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/rubygems/validator.rb (Gem#remove_leading_dot_dir): make
	  this method private.  a patch from okkez in [ruby-dev:37245]
