@@ -1,3 +1,11 @@
+Fri Dec  5 01:37:02 2008  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* win32/win32.c (rb_w32_read): ERROR_BROKEN_PIPE is not a real error
+	  at this point.
+
+	* io.c (pipe_open): use rb_w32_spawn() instead of rb_w32_pipe_exec()
+	  to use our own redirection scheme.
+
 Fri Dec  5 01:35:08 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* string.c (sym_to_proc): use hidden object.
